web/bundles/dodicifansworldweb/less/global.less
.loadmore {
    .btn;
    width: 100%;
    margin-top: 30px;
    margin-bottom: 30px;
}

.internal_buttons {
    text-align: right;
}

.share-box {
    .size(auto, 505px);
    right: 37%;
    background-color:  #ffffff;
    border:  2px solid #e2e2e4;
    border-radius: 3px;
    position: absolute;
    color: @black;
    
    .arrow {
        top: -6px;
        position: absolute;
        left: 50%;
    }

    h4 {
        color: @black;
        float: left;
    }

    .btn {
        color: white !important;
    }

    input {
        border: 2px solid #e2e2e4;
        background-color: @white;
        float: left;
    }

    .top {
        color: @black;
        height:  70px;

        input.wywtsay{
            border: 2px solid #e2e2e4;
            background-color: @white;
            width: 80%;
            float: left;
            margin-left: 45px;
            margin-top: 20px;
        }

        p{
            text-align: left;
            font-size: 15px;
            color: #333333;
            font-weight: bold;
            margin-left: 30px;
            margin-top: 20px;
        }
    }

    .bottom{

        div.sharewith{
            margin-left: 5px;
            margin-bottom: 15px;

            input{
                width:  411px;
            }
        }

        border-top: 2px solid #e2e2e4;
        background-color: #f9f9f9;
        height: 85px;
        padding-left: 41px;
        padding-right: 44px;
        padding-top: 10px;
    }

}

.btn-checkbox{
    background-image: url("../images/fw_sprite_share.png") !important;
    background: transparent;
    border: 0;
    .square(30px);
    background-repeat: none;

    &:hover{
        background: transparent;
        border: 0;
    }

    &.fb{
        background-position: -33px 63px !important;

        &.active, &:hover{
            background-position: -33px 35px !important;
        }
    }

    &.tw{
        background-position: -3px 63px !important;

        &.active, &:hover{
            background-position: -3px 35px !important;
        }
    }

    &.fw{
        width: 35px;
        background-position: 41px 63px !important;

        &.active, &:hover{
            background-position: 41px 35px !important;
        }
    }
}

